# InfiniTTT

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ai_types.h  aiplayer.cpp  aiplayer.cppm  aiplayer.h  best_weights.txt  evaluationweights.h  hybrid_evaluator_v3_weights.txt  hybrid_evaluator_weights.txt  main.cpp  tictactoe.kdev4  tictactoeboard.cpp  tictactoeboard.cppm  tictactoeboard.h  weighttrainer.cpp  weighttrainer.h
.kdev4/: tictactoe.kdev4
android/: AndroidManifest.xml  signing.gradle
debian/: changelog  control  copyright  infinittt.desktop  infinittt.install  rules
qml/: DrawerItem.qml  GameOverDialog.qml  GameSetupDialog.qml  Main.qml
resources/: weights.qrc
src/ai/: ai_utils.cpp  ai_utils.h  aiplayer.h  hybrid_evaluator_ai.cpp  hybrid_evaluator_ai.h  hybrid_evaluator_ai_v2.cpp  hybrid_evaluator_ai_v2.h  hybrid_evaluator_ai_v3.cpp  hybrid_evaluator_ai_v3.h  minimax_ai.cpp  minimax_ai.h  random_ai.cpp  random_ai.h  smart_random_ai.cpp  smart_random_ai.h
src/gui/: boardview.cpp  boardview.h  configdialog.cpp  configdialog.h  gamecontroller.cpp  gamecontroller.h  gamesetupdialog.cpp  gamesetupdialog.h  gridgraphicsitem.cpp  gridgraphicsitem.h  main_gui.cpp  mainwindow.cpp  mainwindow.h
src/qml/: boarditem.cpp  boarditem.h  main_qml.cpp
